--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ Babel==1.3
 blinker==1.3
 coverage==3.7.1
 decorator==3.4.0
-flake8==2.3.0
 Flask==0.10.1
 Flask-Babel==0.9
 Flask-Login==0.2.11
@@ -13,14 +12,13 @@ Flask-WhooshAlchemy==0.56
 Flask-WTF==0.10.3
 flipflop==1.0
 guess-language==0.2
+gunicorn==19.3.0
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
 marstime==0.4.6
-mccabe==0.3
+nose==1.3.4
 pbr==0.10.7
-pep8==1.6.2
-pyflakes==0.8.1
 python-openid==2.2.5
 pytz==2014.10
 roman==2.0.0
